# Spectral-GNN-Benchmark

./: .gitignore  CITATION.cff  LICENSE  README.md  gnn.yml  pyproject.toml  requirements.txt  setup.py
.github/actions/: docs.sh
.github/workflows/: docs.yaml
benchmark/: README.md  exp_filter.py  exp_regression.py  run_best.py  run_eval.py  run_param.py  run_single.py
benchmark/dataset/: __init__.py  gen_feature.py  linkx.py  ogbl.py  ogbn.py  pyg.py  pygn.py  utils.py  yandex.py
benchmark/dataset_process/: __init__.py  grid2d.py  learning_filters.py  linkx.py  utils.py  yandex.py
benchmark/notebook/: .gitattributes  fig_degng.ipynb  fig_hop.ipynb
benchmark/res_process/: fig_deg_normg.ipynb  tab_res_fb.ipynb
benchmark/scripts/: eval_degng.sh  eval_hop.sh  exp_filter.sh  exp_regression.sh  runfb-iter.sh  runfb-lp.sh  runfb.sh  runmb-lp.sh  runmb.sh  runmb_s.sh
benchmark/trainer/: __init__.py  base.py  filter.py  fullbatch.py  load_data.py  load_metric.py  load_model.py  minibatch.py  regression.py
benchmark/utils/: __init__.py  checkpoint.py  config.py  logger.py  tsne.py
docs/source/: arrangement.md  conf.py  customization.rst  index.rst
examples/: eval_single.py  run_best.py  run_eval.py  run_grid_search.py  run_param.py  run_single.py  sfb_iter.py  tab_res_deg.ipynb  tab_res_fb.ipynb
examples/dataset_process/: __init__.py  custom_datasets.py  gen_SBM.sh  learning_filters.py  linkx.py  utils.py  yandex.py
examples/gen_SBM/: gen_SBM.cpp  gen_feature.py
examples/res_process/: tab_res_deg.ipynb  tab_res_fb.ipynb  tab_res_mb.ipynb
examples/scripts/: appr.sh  bern.sh  cheb.sh  cheb2.sh  ck_path.sh  eval_dec.sh  eval_hop.sh  gen_SBM.sh  grid.sh  grid_search_all.sh  pfb_bank_critical.sh  pfb_bank_dec_s.sh  pfb_bank_iter_s.sh  pfb_bank_s.sh  pfb_banki_s.sh  pfb_fix_critical.sh  pfb_fix_dec_s.sh  pfb_fix_iter_s.sh  pfb_fix_s.sh  pfb_var.sh  pfb_var_critical.sh  pfb_var_dec_l.sh  pfb_var_dec_s.sh  pfb_var_iter_s.sh  pfb_var_l.sh  pfb_var_s.sh  pfb_vari_s.sh  pmb_bank_dec_s.sh  pmb_fix_dec_s.sh  pmb_var_dec_l.sh  pmb_var_dec_s.sh  pmb_var_dec_s2.sh  rd_dynamic  sfb.sh  sfbdec.sh  sfbiter.sh  smbpre.sh  test.sh  test_load_data.sh  test_new_data.sh  (+2 more)
examples/trainer/: __init__.py  base.py  custom_datasets.py  fb_iter.py  fullbatch.py  load_data.py  load_metric.py  load_model.py  minibatch.py
examples/utils/: __init__.py  checkpoint.py  config.py  extension.py  logger.py  training.py  tsne.py
pyg_spectral/metrics/: __init__.py  efficacy.py  (+1 more)
(+640 files in other folders)
