[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[project]
name="pyg_spectral"
version="0.1.0"
authors=[
    {name="Ningyi Liao", email="liao0090@e.ntu.edu.sg"},
]
description="Spectral GNN benchmark based on PyG"
readme="README.md"
requires-python=">=3.8"
keywords=[
    "pytorch",
    "graph-neural-networks",
    "spectral-gnn",
]
dependencies=[
    "torch>=2.0",
    "torch_geometric>=2.5.3",
    "pandas>=2.0",
    "torchmetrics>=1.0",
    "ogb>=1.3.6",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.0",
    "optuna>=3.4",
]
