[build-system]
requires=[
    "setuptools",
    "wheel",
]
build-backend="setuptools.build_meta"

[project]
name="pyg_spectral"
version="1.0.0"
authors=[
    {name="Ningyi Liao", email="liao0090@e.ntu.edu.sg"},
]
description="Spectral GNN benchmark based on PyG"
readme="README.md"
classifiers=[
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Environment :: GPU :: NVIDIA CUDA :: 12",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
keywords=[
    "pytorch",
    "graph-neural-networks",
    "spectral-gnn",
]
requires-python=">=3.8"
dependencies=[
    "torch_geometric>=2.5.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
benchmark=[
    "torchmetrics>=1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.0",
    "optuna>=3.4",
]
cpp=[
    "cython>=0.2.15",
    "eigency>=1.77",
]
docs=[
    "sphinx",
    "sphinx_rtd_theme",
    "nbsphinx",
    "myst_parser",
]
